# LinearAlgebraLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/LinearAlgebraLib/: Vector.hpp  Vector3D.hpp
src/: Vector3D.cpp
tests/: CMakeLists.txt  MatrixTest.cpp  VectorTest.cpp
